# trading-ai-bot

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  GETTING_STARTED.md  IMPLEMENTATION_SUMMARY.md  LICENSE  Makefile  README.md  README_OLD.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  run.sh  run_backtest.sh  run_crypto.sh  run_trading.sh  test_columns.py  test_new_features.py
.github/: PULL_REQUEST_TEMPLATE.md
config/: __init__.py  settings.py
docs/: ALPACA_LIVE_TRADING.md  BACKTEST_IMPLEMENTATION.md  CRYPTO_QUICKSTART.md  CRYPTO_TRADING.md  DATA_MANAGEMENT.md  NEW_FEATURES_SUMMARY.md  OVERVIEW.md  QUICKSTART_ALPACA.md  README.md  STRATEGIES.md  (+6 more)
engine/: README.md  pyproject.toml
engine/src/trading_engine/: __init__.py  backtest.py  live_engine.py  metrics.py  models.py  portfolio.py  strategy_interface.py  visualization.py
engine/src/trading_engine/brokers/: __init__.py  alpaca_broker.py  base.py
engine/src/trading_engine/data/: __init__.py  alpaca_provider.py  crypto_provider.py  loader.py  providers.py  validator.py
engine/tests/: test_backtest.py  test_data.py  test_engine_imports.py  test_metrics.py  test_portfolio.py
strategies/: pyproject.toml
strategies/src/strategies/: __init__.py  base.py  bollinger.py  combined.py  config_loader.py  elliott_waves.py  ema.py  ichimoku.py  ma100.py  ma200.py  ma50.py  macd.py  moving_average.py  obv.py  parabolic_sar.py  rsi.py  sma.py  stochastic.py
strategies/tests/: test_import.py  test_ma200.py  test_strategies.py  test_strategy_imports.py
(+26 files in other folders)
